--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "chrome",
             "request": "launch",
             "name": "Launch Chrome against localhost",
-            "url": "http://localhost:4000/login",
+            "url": "http://localhost:4000/game",
             "webRoot": "${workspaceFolder}"
         }
     ]
