--- a/package.json
+++ b/package.json
@@ -23,13 +23,15 @@
     "echarts": "^5.4.1",
     "echarts-for-react": "^3.0.2",
     "graphql": "^16.6.0",
+    "konva": "^9.0.1",
     "lodash": "^4.17.21",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-custom-scrollbars-2": "^4.5.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.8",
-    "react-icons": "^4.7.1"
+    "react-icons": "^4.7.1",
+    "react-konva": "^18.2.7"
   },
   "devDependencies": {
     "eslint": "8.22.0",
