--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.8",
     "react-icons": "^4.7.1",
-    "react-konva": "^18.2.7"
+    "react-konva": "^18.2.7",
+    "socket.io-client": "^4.6.2"
   },
   "devDependencies": {
     "eslint": "8.22.0",
